fix: json viewer not showing null values (#1076)

--- a/web_src/src/App.css
+++ b/web_src/src/App.css
@@ -312,3 +312,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+.json-viewer-hide-types .w-rjv-type:not([data-type="null"]) {
+  display: none !important;
+}
